results/SVCOMP/specgen/log-basic1-2024_02_24_14_11_06.txt
class basic1 {
  public static void main(String[] args) {
    //@ assert System.out != null;
    System.out.println("Hello World!");
    //@ assert System.err != null;
    System.err.println("Hello World!");
    //@ assert System.in != null;
    try {
      int avail;
      //@ maintaining avail == System.in.available();
      //@ decreasing 1;
      try {
        avail = System.in.available();
      } catch (java.io.IOException e) {
      }
    } catch (java.io.IOException e) {
    }
  }
}
/home/max/Documents/JMLGPT/tmp/basic1.java:10: error: Loop specifications must immediately precede a loop statement
      //@ maintaining avail == System.in.available();
          ^
1 error

class basic1 {
  public static void main(String[] args) {
    //@ assert System.out != null;
    System.out.println("Hello World!");
    //@ assert System.err != null;
    System.err.println("Hello World!");
    //@ assert System.in != null;
    try {
      int avail;
      try {
        //@ loop_invariant avail == System.in.available();
        //@ decreases 1;
        avail = System.in.available();
      } catch (java.io.IOException e) {
      }
    } catch (java.io.IOException e) {
    }
  }
}
/home/max/Documents/JMLGPT/tmp/basic1.java:11: error: Loop specifications must immediately precede a loop statement
        //@ loop_invariant avail == System.in.available();
            ^
1 error

class basic1 {
  public static void main(String[] args) {
    //@ assert System.out != null;
    System.out.println("Hello World!");
    //@ assert System.err != null;
    System.err.println("Hello World!");
    //@ assert System.in != null;
    try {
      int avail;
      //@ loop_invariant avail == System.in.available();
      //@ decreases 1;
      try {
        avail = System.in.available();
      } catch (java.io.IOException e) {
      }
    } catch (java.io.IOException e) {
    }
  }
}
/home/max/Documents/JMLGPT/tmp/basic1.java:10: error: Loop specifications must immediately precede a loop statement
      //@ loop_invariant avail == System.in.available();
          ^
1 error

class basic1 {
  public static void main(String[] args) {
    //@ assert System.out != null;
    System.out.println("Hello World!");
    //@ assert System.err != null;
    System.err.println("Hello World!");
    //@ assert System.in != null;
    try {
      int avail;
      //@ loop_invariant avail == System.in.available();
      //@ decreases 1;
      avail = System.in.available();
    } catch (java.io.IOException e) {
    }
  }
}
/home/max/Documents/JMLGPT/tmp/basic1.java:10: error: Loop specifications must immediately precede a loop statement
      //@ loop_invariant avail == System.in.available();
          ^
1 error

class basic1 {
  public static void main(String[] args) {
    //@ assert System.out != null;
    System.out.println("Hello World!");
    //@ assert System.err != null;
    System.err.println("Hello World!");
    //@ assert System.in != null;
    try {
      int avail;
      //@ loop_invariant avail == System.in.available();
      //@ decreases 1;
      avail = System.in.available();
    } catch (java.io.IOException e) {
    }
  }
}
/home/max/Documents/JMLGPT/tmp/basic1.java:10: error: Loop specifications must immediately precede a loop statement
      //@ loop_invariant avail == System.in.available();
          ^
1 error

class basic1 {
  public static void main(String[] args) {
    //@ assert System.out != null;
    System.out.println("Hello World!");
    //@ assert System.err != null;
    System.err.println("Hello World!");
    //@ assert System.in != null;
    try {
      int avail;
      //@ loop_invariant avail == System.in.available();
      //@ decreases 1;
      avail = System.in.available();
    } catch (java.io.IOException e) {
    }
  }
}
/home/max/Documents/JMLGPT/tmp/basic1.java:10: error: Loop specifications must immediately precede a loop statement
      //@ loop_invariant avail == System.in.available();
          ^
1 error

class basic1 {
  public static void main(String[] args) {
    //@ assert System.out != null;
    System.out.println("Hello World!");
    //@ assert System.err != null;
    System.err.println("Hello World!");
    //@ assert System.in != null;
    try {
      int avail;
      //@ loop_invariant avail == System.in.available();
      //@ decreases 1;
      avail = System.in.available();
    } catch (java.io.IOException e) {
    }
  }
}
/home/max/Documents/JMLGPT/tmp/basic1.java:10: error: Loop specifications must immediately precede a loop statement
      //@ loop_invariant avail == System.in.available();
          ^
1 error

class basic1 {
  public static void main(String[] args) {
    //@ assert System.out != null;
    System.out.println("Hello World!");
    //@ assert System.err != null;
    System.err.println("Hello World!");
    //@ assert System.in != null;
    try {
      int avail;
      //@ loop_invariant avail == System.in.available();
      //@ decreases 1;
      avail = System.in.available();
    } catch (java.io.IOException e) {
    }
  }
}
/home/max/Documents/JMLGPT/tmp/basic1.java:10: error: Loop specifications must immediately precede a loop statement
      //@ loop_invariant avail == System.in.available();
          ^
1 error

class basic1 {
  public static void main(String[] args) {
    //@ assert System.out != null;
    System.out.println("Hello World!");
    //@ assert System.err != null;
    System.err.println("Hello World!");
    //@ assert System.in != null;
    try {
      int avail;
      //@ loop_invariant avail == System.in.available();
      //@ decreases 1;
      avail = System.in.available();
    } catch (java.io.IOException e) {
    }
  }
}
/home/max/Documents/JMLGPT/tmp/basic1.java:10: error: Loop specifications must immediately precede a loop statement
      //@ loop_invariant avail == System.in.available();
          ^
1 error

class basic1 {
  public static void main(String[] args) {
    //@ assert System.out != null;
    System.out.println("Hello World!");
    //@ assert System.err != null;
    System.err.println("Hello World!");
    //@ assert System.in != null;
    try {
      int avail;
      //@ loop_invariant avail == System.in.available();
      //@ decreases 1;
      avail = System.in.available();
    } catch (java.io.IOException e) {
    }
  }
}
/home/max/Documents/JMLGPT/tmp/basic1.java:10: error: Loop specifications must immediately precede a loop statement
      //@ loop_invariant avail == System.in.available();
          ^
1 error

class basic1 {
  public static void main(String[] args) {
    //@ assert System.out != null;
    System.out.println("Hello World!");
    //@ assert System.err != null;
    System.err.println("Hello World!");
    //@ assert System.in != null;
    try {
      int avail;
      //@ loop_invariant avail == System.in.available();  
      //@ decreases 1;
      avail = System.in.available();
    } catch (java.io.IOException e) {
    }
  }
}

/home/max/Documents/JMLGPT/tmp/basic1.java:10: error: Loop specifications must immediately precede a loop statement
      //@ loop_invariant avail == System.in.available();  
          ^
1 error

class basic1 {
  public static void main(String[] args) {
    //@ assert System.out != null;
    System.out.println("Hello World!");
    //@ assert System.err != null;
    System.err.println("Hello World!");
    //@ assert System.in != null;
    try {
      int avail;
 
      //@ decreases 1;
      avail = System.in.available();
    } catch (java.io.IOException e) {
    }
  }
}

/home/max/Documents/JMLGPT/tmp/basic1.java:11: error: Loop specifications must immediately precede a loop statement
      //@ decreases 1;
          ^
1 error

class basic1 {
  public static void main(String[] args) {
    //@ assert System.out != null;
    System.out.println("Hello World!");
    //@ assert System.err != null;
    System.err.println("Hello World!");
    //@ assert System.in != null;
    try {
      int avail;
 
      //@ decreases 1;  
      avail = System.in.available();
    } catch (java.io.IOException e) {
    }
  }
}

/home/max/Documents/JMLGPT/tmp/basic1.java:11: error: Loop specifications must immediately precede a loop statement
      //@ decreases 1;  
          ^
1 error

class basic1 {
  public static void main(String[] args) {
    //@ assert System.out != null;
    System.out.println("Hello World!");
    //@ assert System.err != null;
    System.err.println("Hello World!");
    //@ assert System.in != null;
    try {
      int avail;
 
 
      avail = System.in.available();
    } catch (java.io.IOException e) {
    }
  }
}


